fixed global order with regard to header and footer underneath spacing

--- a/src/app/_styles/generalOrder.css
+++ b/src/app/_styles/generalOrder.css
@@ -1,224 +1,34 @@
-.dropdown button {
+.website {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    border: none;
-    color: var(--primary-color);
-    background-color: white;
-    padding: 10px 20px;
-    cursor: pointer;
-    margin: 10px;
-    border-radius: 8px;
-    height: 75% !important;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
-.dropdown button:hover {
-    color: white;
-    background-color: var(--accent-color);
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: white;
-    min-width: 10em; /* Adjusted from 30em */
-    max-width: 20em; /* Added max-width */
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    right: 0;
-    padding: 1em;
-    border-radius: 8px;
-}
-
-.dropdown:hover .dropdown-content,
-.dropdown-content:hover {
-    display: block;
-}
-
-.dropdown-content button {
-    width: 100%;
-    background-color: var(--primary-color);
-    transition: background-color 0.3s ease;
-    display: flex;
-    gap: 8px;
-    border: none;
-    color: var(--primary-color);
-    padding: 10px 20px;
-    cursor: pointer;
-    margin: 10px;
-    border-radius: 8px;
-    height: 100%;
-}
-
-.dropdown-content button:hover {
-    background-color: var(--accent-color);
-}
-
-.App-button.music-button {
-    background-color: var(--primary-color);
-    color: #ffffff;
-}
-
-.App-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    background-color: white;
-    border: none;
-    color: var(--primary-color);
-    padding: 10px 20px;
-    cursor: pointer;
-    margin: 10px;
-    border-radius: 8px;
-    transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.App-button:hover {
-    background-color: var(--primary-color);
-    color: #ffffff;
-}
-
-.button-container {
-    display: flex;
-    gap: 10px;
-    flex: 1;
-    justify-content: flex-end;
-    min-width: 200px;
-}
-
-.switch {
+.header {
+    flex: 0 0 auto;
+    z-index: 10;
     position: relative;
-    display: flex;
-    width: 60px;
-    height: 34px;
 }
 
-.switch-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    border: none;
-    color: var(--primary-color);
-    padding: 10px 20px;
-    cursor: pointer;
-    margin: 10px;
-    border-radius: 8px;
+.footer {
+    flex: 0 0 auto;
+    z-index: 10;
+    position: relative;
 }
 
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    transition: .4s;
-    border-radius: 34px;
+.pages {
+    flex: 1 0 auto;
+    position: relative;
 }
 
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    transition: .4s;
-    border-radius: 50%;
+.spacer {
+    flex: 0 0 auto;
 }
 
-.slider-icon {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 20px;
-    color: var(--primary-color);
+.header-spacer {
+    height: 10vh;
 }
 
-input:checked + .slider .slider-icon {
-    color: white;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-input:checked + .slider {
-    background-color: var(--accent-color);
-}
-
-input:checked + .slider:before {
-    transform: translateX(26px);
-    background-color: black;
-}
-
-/* Mobile Menu Icon (hamburger-menu-icon) */
-.menuToggle {
-    display: none;
-    font-size: 25px;
-}
-
-/* Accessibility and Responsive Design starts here */
-@media (max-width: 1024px) {
-
-    .menuToggle {
-        display: block;
-        color: #333;
-    }
-
-    [data-theme='high-contrast'] .menuToggle {
-        color: var(--primary-color);
-    }
-
-    .dropdown-content {
-        position: relative;
-        min-width: 100px;
-        max-width: 500px;
-    }
-
-    .nav {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-        position: absolute;
-        top: 132px;
-        left: 0;
-        background-color: var(--secondary-color);
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
-
-    .nav.open {
-        display: flex;
-        padding: 0 100px;
-    }
-
-    .logo-container, .nav-links, .button-container {
-        width: 100%;
-        justify-content: center;
-        margin-bottom: 10px;
-    }
-
-    .nav-links {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .button-container {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .App-button {
-        width: 100%;
-        margin: 5px 0;
-    }
-
+.footer-spacer {
+    height: 15vh;
 }
